--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Ресторан</title>
@@ -43,10 +44,116 @@
                     <div class="btn">
                         <a class="button" href="#">ЗАКАЗ СТОЛИКА</a>
                     </div>
-                    
             </div>
+            <div class="header-down">
+                <div class="header-title">
+                    Добро пожаловать в
+
+                    <div class="header-subtitle">
+                        Наш ресторан
+                    </div>
+                    <div class="header-suptitle">
+                        ДОМ ЛУЧШЕЙ ЕДЫ
+                    </div>  
+                    <div class="header-btn">
+                         <a href="" class="header-button">
+                            VIEW MENU
+                         </a>
+                    </div>
+                </div>
+                
+            </div>
+
         </div>  
     </div>
 
+    <div class="cards">
+        <div class="container">
+            <div class="cards-holder">
+                <div class="card">
+                    <div class="card-images">
+                        <img src="./images/card.png" alt="#" class="card-img">
+                    </div>
+
+                    <div class="card-title">
+                        Магическая <span>Атмосфера</span>
+                    </div>
+                    <div class="card-desc">
+                        В нашем заведении царит магическая атмосфера
+                        наполненная вкусными ароматами
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-images">
+                        <img src="./images/card.png" alt="#" class="card-img">
+                    </div>
+
+                    <div class="card-title">
+                        Лучшее качество <span> Еды</span>
+                    </div>
+                    <div class="card-desc">
+                        Качество нашей 
+                        Еды - отменное!                        
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-images">
+                        <img src="./images/card.png" alt="#" class="card-img">
+                    </div>
+
+                    <div class="card-title">
+                        Недорогая <span> Еда</span>                   
+                    </div>
+                    <div class="card-desc">
+                        Стоимость нашей Еды
+                        <br>зависит только от ее
+                        количества. Качество
+                        <br>всегда на высоте!
+                    </div>
+
+                </div>
+            </div>
+        </div>    
+    </div>    
+
+    <div class="history">
+        <div class="container">
+
+                <div class="history-holder">
+                    <div class="history-info">
+                        <div class="history-title">
+                            Наша <span>История</span>
+                        </div>
+                        <div class="history-desc">
+                            Как и у любого другого самобытного места, у нас есть 
+                            своя, особая история. Идея ресторана пришла 
+                            основателям неожиданно. Во время прогулки по лесу
+                            создатель нашего ресторана застрял в сотнях 
+                            километров от ближайшего населенного пункта. Вдали 
+                            от цивилизации и связи им пришлось навремя 
+                            обустровать себе нехитрый быт, добывать и готовить 
+                            себе еду.
+                        </div>
+                        <div class="history-number">
+                            <div class="number-item">
+                                93  <span>Напитки</span>
+                            </div>
+                            <div class="number-item">
+                                206 <span>Еда</span>
+                            </div>
+                            <div class="number-item">
+                                71  <span>Закуски</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="history-images">
+                        <img class="imageges-1" src="/images/img1.png" alt="">
+                        <img class="imageges-2" src="/images/img2.png" alt="">
+                        <img class="imageges-3" src="/images/img3.png" alt="">
+                        <img class="imageges-4" src="/images/design box.png" alt="">
+                    </div>
+                </div>
+            </div>
+    </div>
 </body>
 </html>
