add block review

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Ресторан</title>
@@ -76,7 +78,7 @@
                     </div>
 
                     <div class="card-title">
-                        Магическая <span>Атмосфера</span>
+                        Магическая&nbsp;<span>Атмосфера</span>
                     </div>
                     <div class="card-desc">
                         В нашем заведении царит магическая атмосфера
@@ -89,7 +91,7 @@
                     </div>
 
                     <div class="card-title">
-                        Лучшее качество <span> Еды</span>
+                        Лучшее качество&nbsp;<span>Еды</span>
                     </div>
                     <div class="card-desc">
                         Качество нашей 
@@ -102,7 +104,7 @@
                     </div>
 
                     <div class="card-title">
-                        Недорогая <span> Еда</span>                   
+                        Недорогая&nbsp;<span>Еда</span>                   
                     </div>
                     <div class="card-desc">
                         Стоимость нашей Еды
@@ -118,7 +120,6 @@
 
     <div class="history">
         <div class="container">
-
                 <div class="history-holder">
                     <div class="history-info">
                         <div class="history-title">
@@ -155,5 +156,166 @@
                 </div>
             </div>
     </div>
+
+    <div class="black-block">
+        <div class="container">
+            <div class="block-holder">
+                <div class="left">
+                    <div class="left-title">
+                        Отпразднуйте в одном из 
+                        <br>самых лучших ресторанов.
+                    </div>
+                    <div class="left-text">
+                        Только в этом месяце бизнес-ланч от 250 ₽
+                    </div>
+                </div>
+               
+
+                <div class="right">
+                    <div class="right-button">
+                        <a href="#" class="right-btn">ЗАКАЗ СТОЛИКА</a>
+                    </div>
+                </div>
+            </div>     
+        </div>
+    </div>
+
+    <div class="dishes">
+        <div class="container">
+            <div class="dishes-title">
+                Наши <span>Блюда</span>
+            </div>
+
+            <div class="burgers">
+                <div class="burgers-images">
+                    <img class="pizza" src="/images/pizza.png" alt="">
+                </div>
+                <div class="burgers-items">
+                    <div class="burgers-item">
+                        <img class="burger" src="/images/hamburger.png" alt="">
+                        <div class="burger-text">
+                            Гамбургер Мини ------------------- 220 ₽
+                        </div>
+                    </div>
+                    <div class="burgers-item">
+                        <img class="burger" src="/images/hamburger.png" alt="">
+                        <div class="burger-text">
+                            Гамбургер Мини -------------------  220 ₽
+                        </div>
+                    </div>
+                    <div class="burgers-item">
+                        <img class="burger" src="/images/hamburger.png" alt="">
+                        <div class="burger-text">
+                            Гамбургер Мини -------------------  220 ₽
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="menu">
+        <div class="container">
+            <div class="menu-title">
+                Наше меню
+            </div>
+                <div class="menu-items">
+                    <div class="menu-item">
+                        <div class="menu-image">
+                            <img class="menu-img" src="/images/menu-item.png" alt="">
+                            <div class="price">
+                                <img src="/images/price.png" alt="" class="price-image">
+                                <div class="price-420">
+                                    420
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu-text">
+                            Гамбургер макси
+                        </div>
+                        <div class="menu-subtext">
+                            Максимально толстый 
+                            <br>слой мяса   
+                        </div>
+                        <div class="menu-button">
+                            <a href="#" class="menu-btn">ЗАКАЗАТЬ</a>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-image">
+                            <img class="menu-img" src="/images/menu-item.png" alt="">
+                            <div class="price">
+                                <img src="/images/price.png" alt="" class="price-image">
+                                <div class="price-420">
+                                    420
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu-text">
+                            Гамбургер макси
+                        </div>
+                        <div class="menu-subtext">
+                            Максимально толстый 
+                            <br>слой мяса   
+                        </div>
+                        <div class="menu-button">
+                            <a href="#" class="menu-btn">ЗАКАЗАТЬ</a>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-image">
+                            <img class="menu-img" src="/images/menu-item.png" alt="">
+                            <div class="price">
+                                <img src="/images/price.png" alt="" class="price-image">
+                                <div class="price-420">
+                                    420
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu-text">
+                            Гамбургер макси
+                        </div>
+                        <div class="menu-subtext">
+                            Максимально толстый 
+                            <br>слой мяса   
+                        </div>
+                        <div class="menu-button">
+                            <a href="#" class="menu-btn">ЗАКАЗАТЬ</a>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+        </div>
+    </div>
+
+    <div class="review">
+        <div class="container">
+            <div class="review-items">
+                <div class="review-title">
+                    Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной 
+                    <br>Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. 
+                    <br>Будем рекомендовать этот ресторан своим друзьям и родственникам также за 
+                    <br>рубежом, путешествующих в Санкт-Петербург!!!
+                </div>
+                <div class="review-image">
+                    <img src="/images/review-photo.png" alt="#" class="review-photo">
+                </div>
+                <div class="review-person">
+                    Посетитель
+                </div>
+                <div class="review-name">
+                    Николай Cаркисян
+                </div>
+                <div class="review-rolls">
+                    <img src="/images/Ellipse 7.png" alt="" class="roll-1">
+                    <img src="/images/Ellipse 7.png" alt="" class="roll-2">
+                    <img src="/images/ellipse orange.png" alt="" class="roll-orange">
+                </div>
+            </div>
+        </div>    
+    </div>
+
+    
+
 </body>
 </html>
