add block our chefs

--- a/index.html
+++ b/index.html
@@ -315,6 +315,33 @@
         </div>    
     </div>
 
+    <div class="gallery">
+        <div class="container">
+            <div class="gallery-title">
+                Галерея <span>Блюд</span>
+            </div>
+            <div class="gallery-content">
+                <div class="left-content">
+                    <div class="gallery-up">
+                        <img src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1">
+                    </div>
+                    <div class="gallery-down">
+                        <img src="/images/coffee.jpeg" alt="" class="photo-g-2">
+                        <img src="/images/goulash.jpeg" alt="" class="photo-g-3">
+                    </div>
+                </div>
+                <div class="right-content">
+                    <div class="gallery-up">
+                        <img src="/images/coffee.jpeg" alt="" class="photo-g-2">
+                        <img src="/images/goulash.jpeg" alt="" class="photo-g-3">
+                    </div>
+                    <div class="gallery-down">
+                        <img src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
 </body>
