--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
                         <div class="phone-text">Свяжитесь с нами <br> для 
                             бронирования
                         </div>
-
                     </div>
                     <div class="btn">
                         <a class="button" href="#">ЗАКАЗ СТОЛИКА</a>
                     </div>
+            <div class="burger-menu">
+                <a href="">
+                <img src="/images/b-menu.png" alt="">
+                </a>
+            </div>    
             </div>
             <div class="header-down">
                 <div class="header-title">
@@ -74,7 +78,7 @@
             <div class="cards-holder">
                 <div class="card">
                     <div class="card-images">
-                        <img src="./images/card.png" alt="#" class="card-img">
+                        <img src="/images/card.png" alt="#" class="card-img">
                     </div>
 
                     <div class="card-title">
@@ -222,13 +226,13 @@
                 <div class="menu-items">
                     <div class="menu-item">
                         <div class="menu-image">
-                            <img class="menu-img" src="/images/menu-item.png" alt="">
-                            <div class="price">
+                            <img class="menu-img" src="./images/burger-screen.png" alt="">
+                            <!-- <div class="price">
                                 <img src="/images/price.png" alt="" class="price-image">
                                 <div class="price-420">
                                     420
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="menu-text">
                             Гамбургер макси
@@ -243,13 +247,13 @@
                     </div>
                     <div class="menu-item">
                         <div class="menu-image">
-                            <img class="menu-img" src="/images/menu-item.png" alt="">
-                            <div class="price">
+                            <img class="menu-img" src="/images/burger-screen.png" alt="">
+                            <!-- <div class="price">
                                 <img src="/images/price.png" alt="" class="price-image">
                                 <div class="price-420">
                                     420
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="menu-text">
                             Гамбургер макси
@@ -264,13 +268,13 @@
                     </div>
                     <div class="menu-item">
                         <div class="menu-image">
-                            <img class="menu-img" src="/images/menu-item.png" alt="">
-                            <div class="price">
+                            <img class="menu-img" src="/images/burger-screen.png" alt="">
+                            <!-- <div class="price">
                                 <img src="/images/price.png" alt="" class="price-image">
                                 <div class="price-420">
                                     420
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="menu-text">
                             Гамбургер макси
@@ -323,26 +327,103 @@
             <div class="gallery-content">
                 <div class="left-content">
                     <div class="gallery-up">
-                        <img src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1">
+                        <img src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1 high">
                     </div>
                     <div class="gallery-down">
-                        <img src="/images/coffee.jpeg" alt="" class="photo-g-2">
-                        <img src="/images/goulash.jpeg" alt="" class="photo-g-3">
+                        <img src="/images/coffee.jpeg" alt="" class="photo-g-1">
+                        <img src="/images/goulash.jpeg" alt="" class="photo-g-1">
                     </div>
                 </div>
                 <div class="right-content">
                     <div class="gallery-up">
-                        <img src="/images/coffee.jpeg" alt="" class="photo-g-2">
-                        <img src="/images/goulash.jpeg" alt="" class="photo-g-3">
+                        <img src="/images/coffee.jpeg" alt="" class="photo-g-1">
+                        <img src="/images/goulash.jpeg" alt="" class="photo-g-1">
                     </div>
                     <div class="gallery-down">
-                        <img src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1">
+                        <img src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1 high">
                     </div>
                 </div>
             </div>
         </div>
     </div>
     
+    <div class="chefs">
+        <div class="container">
+            <div class="chefs-title">
+                Наши <span>Повара</span>
+            </div>
+            <div class="chefs-gallery-photo">
+                <img src="/images/chefs 1.png" alt="">
+                <img src="/images/chefs 2.png" alt="">
+                <img src="/images/chefs 3.png   " alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="view-rest">
+        <div class="container">
+        </div>    
+    </div>
+
+    <footer class="footer">
+        <div class="row">
+            <div class="space-block">
+                <div class="footer-block-logo">
+                    <a href="" class="footer_logo">
+                        <img src="/images/logo.png" alt="">
+                    </a>
+                <div class="column-footer">
+                    <div class="footer-menu">
+                        <ul class="footer-menu-sp">
+                            <li>
+                                <a href="#" class="menu-footer-item">НАШЕ МЕНЮ</a>
+                            </li>
+                            <li>
+                                <a href="#" class="menu-footer-item">НАШИ БЛЮДА</a>
+                            </li>
+                            <li>
+                                <a href="#" class="menu-footer-item">НАШИ ПОВАРА</a>
+                            </li>
+                            <li>
+                                <a href="#" class="menu-footer-item">БРОНЬ</a>
+                            </li>
+                        </ul>
+                    <ul class="footer-menu-sp">
+                            <li>
+                                <a href="#" class="menu-footer-item">ОТЗЫВЫ</a>
+                            </li>
+                            <li>
+                                <a href="#" class="menu-footer-item">НАША ИСТОРИЯ</a>
+                            </li>
+                            <li>
+                                <a href="#" class="menu-footer-item">О НАС</a>
+                            </li>
+                            <li>
+                                <a href="#" class="menu-footer-item">КОНТАКТЫ</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                    <div class="phone-block">
+                        <div class="phone-block-flex">
+                            <img src="/images/phone.png" alt="">
+                            <a class="num" href="tel:+999-888-76-54">+999-888-76-54</a>
+                        </div>
+                        <div class="phone-text">Свяжитесь с нами <br> для 
+                            бронирования
+                        </div>
+                    </div>
+                    <div class="btn">
+                        <a class="button" href="#">ЗАКАЗ СТОЛИКА</a>
+                    </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 </html>
