add file script.js + add burger menu + add @media in style.css

--- a/index.html
+++ b/index.html
@@ -45,11 +45,19 @@
                     <div class="btn">
                         <a class="button" href="#">ЗАКАЗ СТОЛИКА</a>
                     </div>
+
             <div class="burger-menu">
-                <a href="">
-                <img src="/images/b-menu.png" alt="">
-                </a>
-            </div>    
+                <button class="burger-button" id="burger">
+                    <img src="/images/b-menu.png" alt="">
+                </button>
+
+                <div id="menu" class="burger-slide disp">
+                    <a class="nav-item block" href="@">ГЛАВНАЯ</a>
+                    <a class="nav-item block" href="@">МЕНЮ</a>
+                    <a class="nav-item block" href="@">О НАС</a>
+                    <a class="nav-item block" href="@">БРОНЬ</a>
+                </div>
+            </div> 
             </div>
             <div class="header-down">
                 <div class="header-title">
@@ -327,20 +335,20 @@
             <div class="gallery-content">
                 <div class="left-content">
                     <div class="gallery-up">
-                        <img src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1 high">
+                        <img class="galery-images high" src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1 high">
                     </div>
                     <div class="gallery-down">
-                        <img src="/images/coffee.jpeg" alt="" class="photo-g-1">
-                        <img src="/images/goulash.jpeg" alt="" class="photo-g-1">
+                        <img class="galery-images" src="/images/coffee.jpeg" alt="" class="photo-g-1">
+                        <img class="galery-images" src="/images/goulash.jpeg" alt="" class="photo-g-1">
                     </div>
                 </div>
                 <div class="right-content">
                     <div class="gallery-up">
-                        <img src="/images/coffee.jpeg" alt="" class="photo-g-1">
-                        <img src="/images/goulash.jpeg" alt="" class="photo-g-1">
+                        <img class="galery-images" src="/images/coffee.jpeg" alt="" class="photo-g-1">
+                        <img class="galery-images" src="/images/goulash.jpeg" alt="" class="photo-g-1">
                     </div>
                     <div class="gallery-down">
-                        <img src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1 high">
+                        <img class="galery-images high" src="/images/table-71380_1280 1.jpeg" alt="" class="photo-g-1 high">
                     </div>
                 </div>
             </div>
@@ -405,25 +413,25 @@
                     </div>
                 </div>
 
-                    <div class="phone-block">
+                    <div class="footer-phone-block">
                         <div class="phone-block-flex">
-                            <img src="/images/phone.png" alt="">
-                            <a class="num" href="tel:+999-888-76-54">+999-888-76-54</a>
+                            <img class="phone-block-photo" src="/images/phone.png" alt="">
+                            <a class="num-footer" href="tel:+999-888-76-54">+999-888-76-54</a>
                         </div>
                         <div class="phone-text">Свяжитесь с нами <br> для 
                             бронирования
                         </div>
                     </div>
-                    <div class="btn">
-                        <a class="button" href="#">ЗАКАЗ СТОЛИКА</a>
+                    <div class="btn-footer">
+                        <a class="button-footer" href="#">ЗАКАЗ СТОЛИКА</a>
                     </div>
-                    </div>
-
-                </div>
             </div>
         </div>
     </footer>
-
+    <div class="copyright">
+       <div class="copyright-text">® Copyright 2022</div>
+    </div>
+<script src="script.js"></script>
 
 </body>
 </html>
